@@ -168,6 +168,7 @@ RCPP_MODULE(acmacs)
             .method("relax", &Projection::relax_default)
             .method("relax_one_iteration", &Projection::relax_one_iteration)
             .method("relax_one_iteration", &Projection::relax_one_iteration_default)
+            .method("dimension_annealing", &Projection::dimension_annealing)
             .method("randomize_layout", &Projection::randomize_layout)
             .method("randomize_layout", &Projection::randomize_layout_default)
             .method("reorient", &Projection::reorient)
